--- a/PoolGames/app/src/main/res/values/strings.xml
+++ b/PoolGames/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_result">ResultActivity</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
