--- a/PoolGames/app/src/main/res/values/strings.xml
+++ b/PoolGames/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_result">ResultActivity</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="preference_file_key">PREFERENCE</string>
+    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
+    <string name="rules">Rules</string>
+    <string name="start_playing">Start Playing</string>
 </resources>
